# ChangeLog for dev-perl/Sys-CPU
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sys-CPU/ChangeLog,v 1.2 2009/12/04 11:49:42 tove Exp $

  04 Dec 2009; Torsten Veller <tove@gentoo.org> Sys-CPU-0.51.ebuild:
  Remove explicit version from SRC_URI

*Sys-CPU-0.51 (04 Dec 2009)

  04 Dec 2009; Benedikt Böhm <hollow@gentoo.org> +Sys-CPU-0.51.ebuild,
  +metadata.xml:
  initial ebuild. required by sys-apps/logwatch
