@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sys-CPU/Sys-CPU-0.51.ebuild,v 1.2 2009/12/04 11:49:42 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sys-CPU/Sys-CPU-0.51.ebuild,v 1.3 2009/12/07 02:07:35 jer Exp $
 
 EAPI=2
 
@@ -12,5 +12,5 @@ DESCRIPTION="Access CPU info. number, etc on Win and UNIX"
 # License is not specified
 LICENSE="|| ( Artistic GPL-2 )"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~hppa ~x86"
 IUSE=""
