@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Sys-MemInfo
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sys-MemInfo/ChangeLog,v 1.2 2009/12/04 11:57:00 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sys-MemInfo/ChangeLog,v 1.3 2009/12/07 02:10:26 jer Exp $
+
+  07 Dec 2009; Jeroen Roovers <jer@gentoo.org> Sys-MemInfo-0.91.ebuild:
+  Marked ~hppa (bug #295639).
 
   04 Dec 2009; Torsten Veller <tove@gentoo.org> Sys-MemInfo-0.91.ebuild:
   Remove explict version from SRC_URI
