@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Sys-CPU
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sys-CPU/ChangeLog,v 1.2 2009/12/04 11:49:42 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sys-CPU/ChangeLog,v 1.3 2009/12/07 02:07:35 jer Exp $
+
+  07 Dec 2009; Jeroen Roovers <jer@gentoo.org> Sys-CPU-0.51.ebuild:
+  Marked ~hppa (bug #295639).
 
   04 Dec 2009; Torsten Veller <tove@gentoo.org> Sys-CPU-0.51.ebuild:
   Remove explicit version from SRC_URI
